# 0.3.25

* Remove duplicate messages from results.

* Read children of v:roundrect.

* Ignore office-word:wrap, v:shadow and v:shapetype.

# 0.3.24

* Continue with warning if external images cannot be found.

* Add support for embedded style maps.

# 0.3.23

* Fix Python 3 support.

# 0.3.22

* Generate warnings for not-understood style mappings and continue, rather than
  stopping with an error.

* Support file objects without a name attribute again (broken since 0.3.20).

# 0.3.21

* Ignore w:numPr elements without w:numId or w:ilvl children.

# 0.3.20

* Add support for linked images.

# 0.3.19

* Fix: cannot extract raw text from elements without children

# 0.3.18

* Support links and images in footnotes and endnotes.

# 0.3.17

* Add support for underlines in style map.

* Add support for strikethrough.

# 0.3.16

* Add basic support for text boxes. The contents of the text box are treated as
  a separate paragraph that appears after the paragraph containing the text box.

# 0.3.15

* Support styles defined without a name

# 0.3.14

* Add ignore_empty_paragraphs option, which defaults to True.

# 0.3.13

* Always use forward slashes in ZIP paths. This should fix image handling on
  Windows.

# 0.3.12

* Make style names case-insensitive in style mappings. This should make style
  mappings easier to write, especially since Microsoft Word sometimes represents
  style names in the UI differently from in the style definition. For instance,
  the style displayed in Word as "Heading 1" has  a style name of "heading 1".
  This hopefully shouldn't cause an issue for anyone, but if you were relying
  on case-sensitivity, please do get in touch.

# 0.3.11

* Add support for hyperlinks to bookmarks in the same document.

# 0.3.10

* Add basic support for Markdown. Not all features are currently supported.

# 0.3.9

* Add default style mappings for builtin footnote and endnote styles in
  Microsoft Word and LibreOffice.
