@@ -2,6 +2,8 @@
 
 * Remove duplicate messages from results.
 
+* Read v:imagedata with r:id attribute.
+
 * Read children of v:roundrect.
 
 * Ignore office-word:wrap, v:shadow and v:shapetype.
